--- a/css/styele.scss
+++ b/css/styele.scss
@@ -352,10 +352,26 @@ $breakpoints: (
       height: 81.4vh;
       width: 100%;
       font-size: 2rem;
-      padding: 20.9% 22%;
+      padding: 10.9% 0 0 10%;
       color: white;
       background-color: #393e46;
       opacity: 0.8;
+      &__title {
+        font-size: 5rem;
+        margin: 3% auto;
+        border-bottom: 3px dotted;
+      }
+      &__message {
+        font-size: 3rem;
+        margin: 2% auto;
+      }
+      &__more {
+        font-size: 2rem;
+        width: 20%;
+        margin: 2% auto;
+        text-align: center;
+        background-color: #00adb5;
+      }
     }
   }
   .skill {
@@ -385,10 +401,22 @@ $breakpoints: (
       height: 100%;
       width: 100%;
       font-size: 2rem;
-      padding: 20.9% 22%;
+      padding: 10.9% 0 0 10%;
       color: #eeeeee;
       background-color: #393e46;
       opacity: 0.8;
+      &__title {
+        font-size: 5rem;
+        margin: 3% auto;
+        border-bottom: 3px dotted;
+      }
+      &__set {
+        display: grid;
+        grid-template-columns: repeat(8,1fr);
+      }
+      &__learn {
+        margin: 2% auto;
+      }
     }
   }
   .works {
@@ -418,10 +446,31 @@ $breakpoints: (
       height: 100%;
       width: 100%;
       font-size: 2rem;
-      padding: 20.9% 22%;
+      padding: 10.9% 0 0 10%;
       color: #eeeeee;
       background-color: #393e46;
       opacity: 0.8;
+      &__title {
+        font-size: 5rem;
+        margin: 3% auto;
+        border-bottom: 3px dotted;
+      }
+      &__container {
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        &-left {
+          font-size: 6rem;
+          margin: 50% auto 30% auto;
+        }
+        &-right {
+          font-size: 6rem;
+          margin: 50% auto 30% auto;
+        }
+        &-image {
+          margin: 0 auto;
+          width: 74%;
+        }
+      }
     }
   }
   .contact {
@@ -451,10 +500,22 @@ $breakpoints: (
       height: 100%;
       width: 100%;
       font-size: 2rem;
-      padding: 20.9% 22%;
+      padding: 10.9% 0 0 10%;
       color: #eeeeee;
       background-color: #393e46;
       opacity: 0.8;
+      &__title {
+        font-size: 5rem;
+        margin: 3% auto;
+        border-bottom: 3px dotted;
+      }
+      &__container {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        &-twitter,&-instagram,&-wantedly {
+          margin: 0 auto;
+        }
+      }
     }
   }
 }
@@ -462,15 +523,24 @@ $breakpoints: (
 .footer {
   height: 100vh;
   background-color: #222831;
+  position: relative;
   .three {
+    height: 95%;
   }
-  .nav {
-    height: 10%;
-    background-color: #00adb5;
-    &__item {
-      display: flex;
-      flex: 1;
-      justify-content: space-around;
+  .top {
+    position: absolute;
+    top: 89vh;
+    left: 95vw;
+    color: #00adb5;
+    background-color: #222831;
+    font-size: 5rem;
+    margin: 0 5% 0 0;
+    a {
+      color: #00adb5;
+      &:hover {
+        color: white;
+        transition: all 1s;
+      }
     }
   }
   .copy {
@@ -478,7 +548,7 @@ $breakpoints: (
     height: 5%;
     width: 100%;
     font-size: 1.5rem;
-    padding-top: 0.5%;
+    padding-top: 2%;
     color: #00adb5;
     background-color: #222831;
     text-align: center;
