--- a/css/styele.css
+++ b/css/styele.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-size: 62.5%;
   height: 100%;
@@ -425,7 +426,7 @@ ul, li {
   width: 3%;
   display: block;
   line-height: 1rem;
-  border: 4px #00adb5 solid;
+  border: 4px #222831 solid;
   margin: 2px 0 0 96%;
 }
 
@@ -433,7 +434,7 @@ ul, li {
   width: 3%;
   display: block;
   line-height: 1rem;
-  border: 4px #00adb5 solid;
+  border: 4px #222831 solid;
   margin: 2px 0 0 96%;
 }
 
@@ -448,229 +449,135 @@ ul, li {
 }
 
 .main .ware__num {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   z-index: 1;
   top: 0;
   left: 0;
   height: 10%;
   width: 100%;
-  font-size: 15rem;
-  padding: 0 8% 10% 0;
-  text-align: right;
   color: #eeeeee;
+  font-size: 10rem;
+  text-align: right;
+  padding-right: 5%;
   background-color: #00adb5;
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+}
+
+@media screen and (min-width: 300px) {
+  .main .ware__num {
+    font-size: 9rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .ware__num {
+    font-size: 10rem;
+  }
 }
 
 .main .ware__about {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
   position: absolute;
   top: 0;
   left: 0;
-  height: 81.4vh;
+  height: 92vh;
   width: 100%;
-  font-size: 2rem;
-  padding: 10.9% 0 0 10%;
-  color: white;
+  padding: 0 0 0 10%;
+  color: #eeeeee;
   background-color: #393e46;
-  opacity: 0.8;
+  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
+          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
 }
 
 .main .ware__about__title {
-  font-size: 5rem;
-  margin: 3% auto;
+  font-size: 3rem;
+  margin: 50% auto 0 auto;
   border-bottom: 3px dotted;
+}
+
+@media screen and (min-width: 300px) {
+  .main .ware__about__title {
+    font-size: 3rem;
+    margin: 25% auto 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .ware__about__title {
+    font-size: 6rem;
+    margin: 20% auto 0 auto;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .main .ware__about__title {
+    font-size: 6rem;
+    margin: 15% auto 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main .ware__about__title {
+    font-size: 6rem;
+    margin: 10% auto 0 auto;
+  }
 }
 
 .main .ware__about__message {
-  font-size: 3rem;
-  margin: 2% auto;
+  width: 100%;
+  font-size: 1rem;
+  margin: 30% auto 10% auto;
+}
+
+@media screen and (min-width: 300px) {
+  .main .ware__about__message {
+    font-size: 1.5rem;
+    margin: 20% auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .ware__about__message {
+    font-size: 2rem;
+    margin: 5% auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .ware__about__message {
+    font-size: 2rem;
+    margin: 5% auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .main .ware__about__message {
+    font-size: 2rem;
+    margin: 10% auto;
+  }
 }
 
 .main .ware__about__more {
+  color: #eeeeee;
   font-size: 2rem;
-  width: 20%;
-  margin: 2% auto;
   text-align: center;
-  background-color: #00adb5;
-}
-
-.main .skill {
-  height: 92vh;
-  background-color: #222831;
-  position: relative;
-  margin: 5%;
-}
-
-.main .skill__num {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  border: 1px solid #eeeeee;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 1s;
+  transition: all 1s;
   height: 10%;
-  width: 100%;
-  font-size: 15rem;
-  padding: 0 8% 10% 0;
-  text-align: right;
-  color: #eeeeee;
-  background-color: #00adb5;
+  width: 90%;
 }
 
-.main .skill__about {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  font-size: 2rem;
-  padding: 10.9% 0 0 10%;
-  color: #eeeeee;
-  background-color: #393e46;
+.main .ware__about__more:hover {
   opacity: 0.8;
-}
-
-.main .skill__about__title {
-  font-size: 5rem;
-  margin: 3% auto;
-  border-bottom: 3px dotted;
-}
-
-.main .skill__about__set {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[8];
-      grid-template-columns: repeat(8, 1fr);
-}
-
-.main .skill__about__learn {
-  margin: 2% auto;
-}
-
-.main .works {
-  height: 92vh;
-  position: relative;
-  background-color: #222831;
-  margin: 10% 5% 5% 5%;
-}
-
-.main .works__num {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 10%;
-  width: 100%;
-  font-size: 15rem;
-  padding: 0 8% 10% 0;
-  text-align: right;
-  color: #eeeeee;
-  background-color: #00adb5;
-}
-
-.main .works__about {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  font-size: 2rem;
-  padding: 10.9% 0 0 10%;
-  color: #eeeeee;
-  background-color: #393e46;
-  opacity: 0.8;
-}
-
-.main .works__about__title {
-  font-size: 5rem;
-  margin: 3% auto;
-  border-bottom: 3px dotted;
-}
-
-.main .works__about__container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 2fr 1fr;
-      grid-template-columns: 1fr 2fr 1fr;
-}
-
-.main .works__about__container-left {
-  font-size: 6rem;
-  margin: 50% auto 30% auto;
-}
-
-.main .works__about__container-right {
-  font-size: 6rem;
-  margin: 50% auto 30% auto;
-}
-
-.main .works__about__container-image {
-  margin: 0 auto;
-  width: 74%;
-}
-
-.main .contact {
-  height: 92vh;
-  position: relative;
-  background-color: #222831;
-  margin: 10% 5% 5% 5%;
-}
-
-.main .contact__num {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 10%;
-  width: 100%;
-  font-size: 15rem;
-  padding: 0 8% 10% 0;
-  text-align: right;
-  color: #eeeeee;
-  background-color: #00adb5;
-}
-
-.main .contact__about {
-  -webkit-box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-          box-shadow: inset 0 10px 25px 0 rgba(238, 238, 238, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  font-size: 2rem;
-  padding: 10.9% 0 0 10%;
-  color: #eeeeee;
-  background-color: #393e46;
-  opacity: 0.8;
-}
-
-.main .contact__about__title {
-  font-size: 5rem;
-  margin: 3% auto;
-  border-bottom: 3px dotted;
-}
-
-.main .contact__about__container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-}
-
-.main .contact__about__container-twitter, .main .contact__about__container-instagram, .main .contact__about__container-wantedly {
-  margin: 0 auto;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  color: #393e46;
+  background-color: #eeeeee;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 .footer {
@@ -684,23 +591,15 @@ ul, li {
 }
 
 .footer .top {
-  position: absolute;
-  top: 89vh;
-  left: 95vw;
-  color: #00adb5;
-  background-color: #222831;
-  font-size: 5rem;
-  margin: 0 5% 0 0;
+  height: 5%;
+  width: 100%;
+  background-color: #eeeeee;
 }
 
-.footer .top a {
-  color: #00adb5;
-}
-
-.footer .top a:hover {
-  color: white;
-  -webkit-transition: all 1s;
-  transition: all 1s;
+.footer .top::after {
+  content: "⬆︎";
+  font-size: 2rem;
+  margin-left: 50%;
 }
 
 .footer .copy {
@@ -708,7 +607,6 @@ ul, li {
   height: 5%;
   width: 100%;
   font-size: 1.5rem;
-  padding-top: 2%;
   color: #00adb5;
   background-color: #222831;
   text-align: center;
